--- a/Components/List/list.css
+++ b/Components/List/list.css
@@ -1,10 +1,10 @@
 .list__wrapper {
-  margin-right: 1rem;
+  margin-right: var(--sp-1);
 }
 
 .list-inline {
   display: flex;
-  gap: 0.5rem;
+  gap: var(--sp-0-5);
 }
 
 .list-type-bullet {
@@ -45,12 +45,12 @@
 
 .stacked__list-item {
   height: max-content;
-  padding: 1rem;
+  padding: var(--sp-1);
   border: 1px solid var(--dark-secondary-color);
 }
 
 .stacked__list-item:not(:last-child) {
-  margin-bottom: 0.5rem;
+  margin-bottom: var(--sp-0-5);
 }
 
 .stacked__list-item:hover {
