--- a/Styles/padding.css
+++ b/Styles/padding.css
@@ -1,9 +1,9 @@
 /* padding  */
 
 .p-0 {
-    padding: 0;
-  }
-  
+  padding: 0;
+}
+
 .px-0 {
   padding-left: 0;
   padding-right: 0;
@@ -29,97 +29,96 @@
 .pl-0 {
   padding-left: 0;
 }
-  
+
 /* padding - 0.5rem */
 .p-sm {
-  padding: 0.5rem;
+  padding: var(--sp-0-5);
 }
 
 .px-sm {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding-left: var(--sp-0-5);
+  padding-right: var(--sp-0-5);
 }
 
 .py-sm {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: var(--sp-0-5);
+  padding-bottom: var(--sp-0-5);
 }
 
 .pt-sm {
-  padding-top: 0.5rem;
+  padding-top: var(--sp-0-5);
 }
 
 .pr-sm {
-  padding-right: 0.5rem;
+  padding-right: var(--sp-0-5);
 }
 
 .pb-sm {
-  padding-bottom: 0.5rem;
+  padding-bottom: var(--sp-0-5);
 }
 
 .pl-sm {
-  padding-left: 0.5rem;
+  padding-left: var(--sp-0-5);
 }
-  
+
 /* padding - 1rem */
 .p-1 {
-  padding: 1rem;
+  padding: var(--sp-1);
 }
 
 .px-1 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: var(--sp-1);
+  padding-right: var(--sp-1);
 }
 
 .py-1 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: var(--sp-1);
+  padding-bottom: var(--sp-1);
 }
 
 .pt-1 {
-  padding-top: 1rem;
+  padding-top: var(--sp-1);
 }
 
 .pr-1 {
-  padding-right: 1rem;
+  padding-right: var(--sp-1);
 }
 
 .pb-1 {
-  padding-bottom: 1rem;
+  padding-bottom: var(--sp-1);
 }
 
 .pl-1 {
-  padding-left: 1rem;
+  padding-left: var(--sp-1);
 }
-  
+
 /* padding - 2rem */
 .p-2 {
-  padding: 2rem;
+  padding: var(--sp-2);
 }
 
 .px-2 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: var(--sp-2);
+  padding-right: var(--sp-2);
 }
 
 .py-2 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: var(--sp-2);
+  padding-bottom: var(--sp-2);
 }
 
 .pt-2 {
-  padding-top: 2rem;
+  padding-top: var(--sp-2);
 }
 
 .pr-2 {
-  padding-right: 2rem;
+  padding-right: var(--sp-2);
 }
 
 .pb-2 {
-  padding-bottom: 2rem;
+  padding-bottom: var(--sp-2);
 }
 
 .pl-2 {
-  padding-left: 2rem;
+  padding-left: var(--sp-2);
 }
-  
