--- a/Styles/typography.css
+++ b/Styles/typography.css
@@ -65,37 +65,37 @@ h6,
 
 .h1,
 h1 {
-  font-size: 3rem;
+  font-size: var(--sp-3);
 }
 
 .h2,
 h2 {
-  font-size: 2.5rem;
+  font-size: var(--sp-2-5);
 }
 
 .h3,
 h3 {
-  font-size: 2rem;
+  font-size: var(--sp-2);
 }
 
 .h4,
 h4 {
-  font-size: 1.75rem;
+  font-size: var(--sp-1-75);
 }
 
 .h5,
 h5 {
-  font-size: 1.5rem;
+  font-size: var(--sp-1-5);
 }
 
 .h6,
 h6 {
-  font-size: 1.25rem;
+  font-size: var(--sp-1-25);
 }
 
 p,
 .p {
-  font-size: 1.25 rem;
+  font-size: var(--sp-1-25);
   margin: 0.625rem 0;
   line-height: 1.5;
 }
@@ -104,45 +104,45 @@ p,
 
 .txt-xs {
   font-size: 0.75rem;
-  line-height: 1rem;
+  line-height: var(--sp-1);
 }
 
 .txt-sm {
   font-size: 0.875rem;
-  line-height: 1.25rem;
+  line-height: var(--sp-1-25);
 }
 
 .txt-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: var(--sp-1);
+  line-height: var(--sp-1-5);
 }
 
 .txt-lg {
   font-size: 1.125rem;
-  line-height: 1.75rem;
+  line-height: var(--sp-1-75);
 }
 
 .txt-xl {
   font-size: 1.2rem;
-  line-height: 1.75rem;
+  line-height: var(--sp-1-75);
 }
 
 .txt-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: var(--sp-1-5);
+  line-height: var(--sp-2);
 }
 
 .txt-3xl {
   font-size: 1.875rem;
-  line-height: 2.25rem;
+  line-height: var(--sp-2-25);
 }
 
 .txt-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+  font-size: var(--sp-2-25);
+  line-height: var(--sp-2-5);
 }
 
 .txt-5xl {
-  font-size: 3rem;
-  line-height: 3rem;
+  font-size: var(--sp-3);
+  line-height: var(--sp-3);
 }
